--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rust-bao"
 version = "0.1.0"
 edition = "2021"
+authors = ["Linkun Chen <chenlinkun2214@163.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
