--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,13 @@ authors = ["Linkun Chen <chenlinkun2214@163.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+buddy_system_allocator = "0.8"
+spin = "0.7.1"
 
-[target.aarch64-unknown-none]
-rustflags = [
-    "-Clink-arg=-Tsrc/linker.ld", "-Cforce-frame-pointers=yes"
-]
+[profile.release]
+debug = 2
 
 [target.aarch64-unknown-none.dependencies]
 aarch64 = "0.0.7"
 tock-registers = "0.7"
-psci = "0.1.1"
+psci = { version = "0.1.1", default-features = false, features = ["smc"] }
