--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ authors = ["Linkun Chen <chenlinkun2214@163.com>"]
 [dependencies]
 buddy_system_allocator = "0.8"
 spin = "0.7.1"
+lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
 
 [profile.release]
 debug = 2
+opt = 1
 
 [target.aarch64-unknown-none.dependencies]
 aarch64 = "0.0.7"
