--- a/.cargo/config
+++ b/.cargo/config
@@ -3,5 +3,6 @@ target = "aarch64-unknown-none"
 
 [target.aarch64-unknown-none]
 rustflags = [
-    "-Clink-arg=-Tsrc/linker_mmu.ld", "-Cforce-frame-pointers=yes",
+    "-Clink-arg=-Tsrc/linker_mmu.ld",
+    "-Cforce-frame-pointers=yes",
 ]
