--- a/.cargo/config
+++ b/.cargo/config
@@ -5,5 +5,6 @@ target = "aarch64-unknown-none"
 linker = "aarch64-none-elf-ld"
 rustflags = [
     "-Clink-arg=-Tsrc/linker_mmu.ld",
+    "-Ctarget-feature=+v8a, +a53",
     "-Cforce-frame-pointers=yes",
 ]
